2003-04-17  Moritz Schulte  <moritz@g10code.com>

	* pubkey.c: Terminate list correctly.
	* md.c: Include sha512/sha384 in digest_table.

2003-04-16  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am: Include support for sha512.c.

	* sha512.c: New file, merged from GnuPG, with few modifications
	for libgcrypt.

	* rand-internal.h: Removed declarations for constructor functions.

	* md.c (md_copy): Call _gcry_module_use for incrementing the usage
	counter of the digest modules.

	* rsa.c: Do not include "rsa.h".
	* dsa.c: Do not include "dsa.h".
	* elgamal.c: Do not include "elgamal.h".
	* des.c: Do not include "des.h".
	* cast5.c: Do not include "cast5.h".
	* blowfish.c: Do not include "blowfish.h".
	* arcfour.c: Do not include "arcfour.h".

	* Makefile.am (libcipher_la_DEPENDENCIES): Removed.
	(libcipher_la_LIBADD): Removed.
	Use Automake conditionals for conditional compilation.

2003-04-13  Moritz Schulte  <moritz@g10code.com>

	* cipher.c (gcry_cipher_open): Call REGISTER_DEFAULT_CIPHERS.

	* md.c (gcry_md_list): New member: module.
	(md_enable): New variable: module, changed use of module and
	digest.
	(md_enable): Initialize member: module.
	(md_close): Call _gcry_module_release.

	* cipher.c (gcry_cipher_open): New variable: module, changed use of
	module and cipher.
	(struct gcry_cipher_handle): New member: module.
	(gcry_cipher_open): Initialize member: module.
	(gcry_cipher_close): Call _gcry_module_release.

2003-04-09  Moritz Schulte  <moritz@g10code.com>
	
	* cipher.c: Include "ath.h".
	* md.c: Likewise.
	* pubkey.c: Likewise.

	* cipher.c (ciphers_registered_lock): New variable.
	* md.c (digests_registered_lock): New variable.
	* pubkey.c (pubkeys_registered_lock): New variable.

	* rndlinux.c (gnupgext_version, func_table): Removed definitions.
	(gnupgext_enum_func): Removed function.
	(_gcry_rndlinux_constructor): Removed function.

	* rndegd.c (gnupgext_version, func_table): Removed definitions.
	(gnupgext_enum_func): Removed function.